# doc_scrolls

./: .gitignore  OUTLINE.md  README.md  pyproject.toml
.tmp-home/.local/share/doc_scrolls/: installed.json
doc_scrolls/: __init__.py  cli.py  indexer.py  models.py  search.py  service.py  storage.py
doc_scrolls/adapters/: python_adapter.py
doc_scrolls/ui/: __init__.py  app.py
tests/: test_cli.py  test_install.py  test_python_adapter_security.py  test_search.py  test_service.py
