[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc_scrolls"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "markdownify",
    "textual",
    "typer",
]

[project.scripts]
doc-scrolls = "doc_scrolls.cli:app"

[project.optional-dependencies]
dev = ["ipython", "pytest", "ruff"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
